Criei a página principal

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum cumque officiis at mollitia eligendi sit accusantium voluptate excepturi quasi, recusandae explicabo facere a. Voluptate, ex eligendi harum architecto similique cumque!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, fugiat nemo veritatis quod voluptates earum id facere velit illum, fuga asperiores quo quisquam optio totam consequuntur exercitationem excepturi? Veritatis, dolorum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eveniet, sit iusto voluptatum fugit enim similique provident exercitationem autem quasi modi consequuntur ipsum neque aliquid reprehenderit hic! Explicabo, ullam voluptates?</p>
 </body>
 </html>
